# cudalicious

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
example/vector_add/: main.cpp  vector_add.cu  vector_add.cuh
include/cudalicious/: blas.hpp  core.hpp  cudalicious.h  solver.hpp
script/: build  clean
